# mobilenetv2

./: .gitignore
01_python/: 01_check_deps.py  02_convert_model.py  03_benchmark_all.py  README.md  requirements.txt  rknn_convert_inference.py
02_cpp/: CMakeLists.txt  README.md  build_exe.sh  build_so.sh
02_cpp/examples/: CMakeLists.txt  cpp_inference_test.cpp
02_cpp/include/: inference_backend.hpp  mnn_backend.hpp  ncnn_backend.hpp  onnx_backend.hpp  tensorrt_backend.hpp  tflite_backend.hpp
02_cpp/src/: inference_backend.cpp  mnn_backend.cpp  ncnn_backend.cpp  onnx_backend.cpp  tensorrt_backend.cpp  tflite_backend.cpp
input/: dataset.txt
model/: download.sh
